--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@
     color: transparent;
     background-position: 50% 50%;
     background-repeat: no-repeat;
-    -webkit-background-size: 1280px 740px;
-    background-size: 1280px 740px;
+    -webkit-background-size: cover;
+    background-size: cover;
     opacity: 0;
     z-index: 0;
 	-webkit-backface-visibility: hidden;
