--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@
     color: transparent;
     background-position: 50% 50%;
     background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    background-size: cover;
+    -webkit-background-size: contain;
+    background-size: contain;
     opacity: 0;
     z-index: 0;
 	-webkit-backface-visibility: hidden;
