--- a/css/style.css
+++ b/css/style.css
@@ -1,227 +1,1 @@
-.cb-slideshow,
-.cb-slideshow:after { 
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0px;
-    left: 0px;
-    z-index: 0; 
-} 
-.cb-slideshow li span { 
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    color: transparent;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    background-size: cover;
-    opacity: 0;
-    z-index: 0;
-	-webkit-backface-visibility: hidden;
-    -webkit-animation: imageAnimation 150s linear infinite 0s;
-    -moz-animation: imageAnimation 150s linear infinite 0s;
-    -o-animation: imageAnimation 150s linear infinite 0s;
-    -ms-animation: imageAnimation 150s linear infinite 0s;
-    animation: imageAnimation 150s linear infinite 0s; 
-}
-.cb-slideshow li div { 
-    z-index: 1000;
-    position: absolute;
-    bottom: 30px;
-    left: 0px;
-    width: 100%;
-    text-align: center;
-    opacity: 0;
-    color: #fff;
-    -webkit-animation: titleAnimation 36s linear infinite 0s;
-    -moz-animation: titleAnimation 36s linear infinite 0s;
-    -o-animation: titleAnimation 36s linear infinite 0s;
-    -ms-animation: titleAnimation 36s linear infinite 0s;
-    animation: titleAnimation 36s linear infinite 0s; 
-}
-.cb-slideshow li div h3 { 
-    font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif;
-    font-size: 240px;
-    padding: 0;
-    line-height: 200px; 
-}
-.cb-slideshow li:nth-child(1) span { 
-    background-image: url(../images/1.jpg); 
-}
-.cb-slideshow li:nth-child(2) span { 
-    background-image: url(../images/2.jpg);
-    -webkit-animation-delay: 15s;
-    -moz-animation-delay: 15s;
-    -o-animation-delay: 15s;
-    -ms-animation-delay: 15s;
-    animation-delay: 15s; 
-}
-.cb-slideshow li:nth-child(3) span { 
-    background-image: url(../images/3.jpg);
-    -webkit-animation-delay:30s;
-    -moz-animation-delay:30s;
-    -o-animation-delay:30s;
-    -ms-animation-delay: 30s;
-    animation-delay: 30s;
-}
-.cb-slideshow li:nth-child(4) span { 
-    background-image: url(../images/4.jpg);
-    -webkit-animation-delay: 45s;
-    -moz-animation-delay: 45s;
-    -o-animation-delay: 45s;
-    -ms-animation-delay: 45s;
-    animation-delay: 45s; 
-}
-.cb-slideshow li:nth-child(5) span { 
-    background-image: url(../images/5.jpg);
-    -webkit-animation-delay: 60s;
-    -moz-animation-delay: 60s;
-    -o-animation-delay: 60s;
-    -ms-animation-delay: 60s;
-    animation-delay: 60s; 
-}
-.cb-slideshow li:nth-child(6) span { 
-    background-image: url(../images/6.jpg);
-   -webkit-animation-delay: 75s;
-    -moz-animation-delay: 75s;
-    -o-animation-delay: 75s;
-    -ms-animation-delay: 75s;
-    animation-delay: 75s; 
-}
-.cb-slideshow li:nth-child(7) span { 
-    background-image: url(../images/7.jpg);
-    -webkit-animation-delay: 90s;
-    -moz-animation-delay: 90s;
-    -o-animation-delay: 90s;
-    -ms-animation-delay: 90s;
-    animation-delay: 90s; 
-}
-.cb-slideshow li:nth-child(8) span { 
-    background-image: url(../images/8.jpg);
-    -webkit-animation-delay: 105s;
-    -moz-animation-delay: 105s;
-    -o-animation-delay: 105s;
-    -ms-animation-delay: 105s;
-    animation-delay: 105s; 
-}
-.cb-slideshow li:nth-child(9) span { 
-    background-image: url(../images/9.jpg);
-    -webkit-animation-delay: 120s;
-    -moz-animation-delay: 120s;
-    -o-animation-delay: 120s;
-    -ms-animation-delay: 120s;
-    animation-delay: 120s; 
-}
-.cb-slideshow li:nth-child(10) span { 
-    background-image: url(../images/10.jpg);
-    -webkit-animation-delay: 135s;
-    -moz-animation-delay: 135s;
-    -o-animation-delay: 135s;
-    -ms-animation-delay: 135s;
-    animation-delay: 135s;  
-}
-.cb-slideshow li:nth-child(11) span { 
-    background-image: url(../images/11.jpg);
-    -webkit-animation-delay: 150s;
-    -moz-animation-delay: 150s;
-    -o-animation-delay: 150s;
-    -ms-animation-delay: 150s;
-    animation-delay: 150s;  
-}
-
-/* Animation for the slideshow images */
-@-webkit-keyframes imageAnimation { 
-    0% { opacity: 0;
-    -webkit-animation-timing-function: ease-in; }
-    8% { opacity: 1;
-         -webkit-animation-timing-function: ease-out; }
-    17% { opacity: 1 }
-    25% { opacity: 0 }
-    100% { opacity: 0 }
-}
-@-moz-keyframes imageAnimation { 
-    0% { opacity: 0;
-    -moz-animation-timing-function: ease-in; }
-    8% { opacity: 1;
-         -moz-animation-timing-function: ease-out; }
-    17% { opacity: 1 }
-    25% { opacity: 0 }
-    100% { opacity: 0 }
-}
-@-o-keyframes imageAnimation { 
-    0% { opacity: 0;
-    -o-animation-timing-function: ease-in; }
-    8% { opacity: 1;
-         -o-animation-timing-function: ease-out; }
-    17% { opacity: 1 }
-    25% { opacity: 0 }
-    100% { opacity: 0 }
-}
-@-ms-keyframes imageAnimation { 
-    0% { opacity: 0;
-    -ms-animation-timing-function: ease-in; }
-    8% { opacity: 1;
-         -ms-animation-timing-function: ease-out; }
-    17% { opacity: 1 }
-    25% { opacity: 0 }
-    100% { opacity: 0 }
-}
-@keyframes imageAnimation { 
-    0% { opacity: 0;
-    animation-timing-function: ease-in; }
-    8% { opacity: 1;
-         animation-timing-function: ease-out; }
-    17% { opacity: 1 }
-    25% { opacity: 0 }
-    100% { opacity: 0 }
-}
-/* Animation for the title */
-@-webkit-keyframes titleAnimation { 
-    0% { opacity: 0 }
-    8% { opacity: 1 }
-    17% { opacity: 1 }
-    19% { opacity: 0 }
-    100% { opacity: 0 }
-}
-@-moz-keyframes titleAnimation { 
-    0% { opacity: 0 }
-    8% { opacity: 1 }
-    17% { opacity: 1 }
-    19% { opacity: 0 }
-    100% { opacity: 0 }
-}
-@-o-keyframes titleAnimation { 
-    0% { opacity: 0 }
-    8% { opacity: 1 }
-    17% { opacity: 1 }
-    19% { opacity: 0 }
-    100% { opacity: 0 }
-}
-@-ms-keyframes titleAnimation { 
-    0% { opacity: 0 }
-    8% { opacity: 1 }
-    17% { opacity: 1 }
-    19% { opacity: 0 }
-    100% { opacity: 0 }
-}
-@keyframes titleAnimation { 
-    0% { opacity: 0 }
-    8% { opacity: 1 }
-    17% { opacity: 1 }
-    19% { opacity: 0 }
-    100% { opacity: 0 }
-}
-/* Show at least something when animations not supported */
-.no-cssanimations .cb-slideshow li span{
-	opacity: 1;
-}
-
-@media screen and (max-width: 1280px) { 
-    .cb-slideshow li div h3 { font-size: 140px }
-}
-@media screen and (max-width: 600px) { 
-    .cb-slideshow li div h3 { font-size: 80px }
-}
+.cb-slideshow,.cb-slideshow:after{position: fixed; width: 100%; height: 100%; top: 0px; left: 0px; z-index: 0;}.cb-slideshow li span{width: 100%; height: 100%; position: absolute; top: 0px; left: 0px; color: transparent; background-position: 50% 50%; background-repeat: no-repeat; -webkit-background-size: cover; background-size: cover; opacity: 0; z-index: 0;-webkit-backface-visibility: hidden; -webkit-animation: imageAnimation 150s linear infinite 0s; -moz-animation: imageAnimation 150s linear infinite 0s; -o-animation: imageAnimation 150s linear infinite 0s; -ms-animation: imageAnimation 150s linear infinite 0s; animation: imageAnimation 150s linear infinite 0s;}.cb-slideshow li:nth-child(1) span{background-image: url(../images/1.jpg);}.cb-slideshow li:nth-child(2) span{background-image: url(../images/2.jpg); -webkit-animation-delay: 15s; -moz-animation-delay: 15s; -o-animation-delay: 15s; -ms-animation-delay: 15s; animation-delay: 15s;}.cb-slideshow li:nth-child(3) span{background-image: url(../images/3.jpg); -webkit-animation-delay:30s; -moz-animation-delay:30s; -o-animation-delay:30s; -ms-animation-delay: 30s; animation-delay: 30s;}.cb-slideshow li:nth-child(4) span{background-image: url(../images/4.jpg); -webkit-animation-delay: 45s; -moz-animation-delay: 45s; -o-animation-delay: 45s; -ms-animation-delay: 45s; animation-delay: 45s;}.cb-slideshow li:nth-child(5) span{background-image: url(../images/5.jpg); -webkit-animation-delay: 60s; -moz-animation-delay: 60s; -o-animation-delay: 60s; -ms-animation-delay: 60s; animation-delay: 60s;}.cb-slideshow li:nth-child(6) span{background-image: url(../images/6.jpg); -webkit-animation-delay: 75s; -moz-animation-delay: 75s; -o-animation-delay: 75s; -ms-animation-delay: 75s; animation-delay: 75s;}.cb-slideshow li:nth-child(7) span{background-image: url(../images/7.jpg); -webkit-animation-delay: 90s; -moz-animation-delay: 90s; -o-animation-delay: 90s; -ms-animation-delay: 90s; animation-delay: 90s;}.cb-slideshow li:nth-child(8) span{background-image: url(../images/8.jpg); -webkit-animation-delay: 105s; -moz-animation-delay: 105s; -o-animation-delay: 105s; -ms-animation-delay: 105s; animation-delay: 105s;}.cb-slideshow li:nth-child(9) span{background-image: url(../images/9.jpg); -webkit-animation-delay: 120s; -moz-animation-delay: 120s; -o-animation-delay: 120s; -ms-animation-delay: 120s; animation-delay: 120s;}.cb-slideshow li:nth-child(10) span{background-image: url(../images/10.jpg); -webkit-animation-delay: 135s; -moz-animation-delay: 135s; -o-animation-delay: 135s; -ms-animation-delay: 135s; animation-delay: 135s;}.cb-slideshow li:nth-child(11) span{background-image: url(../images/11.jpg); -webkit-animation-delay: 150s; -moz-animation-delay: 150s; -o-animation-delay: 150s; -ms-animation-delay: 150s; animation-delay: 150s;}/* Animation for the slideshow images */@-webkit-keyframes imageAnimation{0%{opacity: 0; -webkit-animation-timing-function: ease-in;}8%{opacity: 1; -webkit-animation-timing-function: ease-out;}17%{opacity: 1}25%{opacity: 0}100%{opacity: 0}}@-moz-keyframes imageAnimation{0%{opacity: 0; -moz-animation-timing-function: ease-in;}8%{opacity: 1; -moz-animation-timing-function: ease-out;}17%{opacity: 1}25%{opacity: 0}100%{opacity: 0}}@-o-keyframes imageAnimation{0%{opacity: 0; -o-animation-timing-function: ease-in;}8%{opacity: 1; -o-animation-timing-function: ease-out;}17%{opacity: 1}25%{opacity: 0}100%{opacity: 0}}@-ms-keyframes imageAnimation{0%{opacity: 0; -ms-animation-timing-function: ease-in;}8%{opacity: 1; -ms-animation-timing-function: ease-out;}17%{opacity: 1}25%{opacity: 0}100%{opacity: 0}}@keyframes imageAnimation{0%{opacity: 0; animation-timing-function: ease-in;}8%{opacity: 1; animation-timing-function: ease-out;}17%{opacity: 1}25%{opacity: 0}100%{opacity: 0}}/* Show at least something when animations not supported */.no-cssanimations .cb-slideshow li span{opacity: 1;}
